[package]
name = "mijinko_"
version = "0.1.0"
authors = ["ryotarofr <ryoryo.fr0608@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
getrandom = { version = "0.2.15", features = ["js"] }
keyboard-types = "0.7.0"
tokio = "1.41.0"
web-sys = "0.3.72"
wasm-bindgen = "0.2.95"
serde_json = "1.0.132"
dioxus-radio = "0.2.4"
once_cell = "1.18"
tracing = "0.1.41"
regex = "1.11.1"
parking_lot = "0.12.3"
serde = "1.0.217"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
